Moved .razor views to Client project, since that one will be generating them Made DocumentGenerator.cs generic

--- a/Invoicify.Client/Invoices/InvoiceComponents/PartyInfoComponent.razor
+++ b/Invoicify.Client/Invoices/InvoiceComponents/PartyInfoComponent.razor
@@ -2,7 +2,8 @@
 
 <div class="party @Alignment">
     <h3>@Title:</h3>
-    <p><span class="value">@Info.Name</span></p>
+    <p><span class="value">@Info.FirstName</span></p>
+    <p><span class="value">@Info.LastName</span></p>
     <p><span class="value">@Info.Address.Street, @Info.Address.ZipCode, @Info.Address.City</span></p>
     <p><span class="value">@Info.Address.Country, @Info.Address.State</span></p>
     <br/>
