--- a/Invoicify.Client/Invoices/InvoiceView.razor
+++ b/Invoicify.Client/Invoices/InvoiceView.razor
@@ -1,9 +1,8 @@
 @page "/invoice-view"
-@using FileGenerator.Invoices.InvoiceComponents
+@using Invoicify.Client.Invoices.InvoiceComponents
 
 
 <!DOCTYPE html>
-<h1>TEST</h1>
 <div class="invoice-container" xmlns="http://www.w3.org/1999/html">
     <InvoiceHeaderComponent Number="@Invoice.Number" IssueDate="@Invoice.IssueDate" DueDate="@Invoice.DueDate" />
 
