--- a/Invoicify.Client/Pages/Home.razor
+++ b/Invoicify.Client/Pages/Home.razor
@@ -1,7 +1,40 @@
 ﻿@page "/"
 
+
 <PageTitle>Home</PageTitle>
+<h1 class="text-center mb-4">Welcome to the Dashboard</h1>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<div class="container">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col" >
+            <NavLink href="/Invoice/Browser" class="btn btn-primary w-100 py-3">
+                Browse Invoices
+            </NavLink>
+        </div>
+        <div class="col">
+            <NavLink href="/Invoice/Creator" class="btn btn-secondary w-100 py-3">
+                Create Invoice
+            </NavLink>
+        </div>
+        <div class="col">
+            <NavLink href="/page3" class="btn btn-success w-100 py-3">
+                Page 3
+            </NavLink>
+        </div>
+        <div class="col">
+            <NavLink href="/page4" class="btn btn-danger w-100 py-3">
+                Page 4
+            </NavLink>
+        </div>
+        <div class="col">
+            <NavLink href="/settings" class="btn btn-warning w-100 py-3">
+                Settings
+            </NavLink>
+        </div>
+        <div class="col">
+            <NavLink href="/help" class="btn btn-info w-100 py-3">
+                Help
+            </NavLink>
+        </div>
+    </div>
+</div>
