--- a/Invoicify.Client/BlazorComponents/OrderInfoComponent.razor
+++ b/Invoicify.Client/BlazorComponents/OrderInfoComponent.razor
@@ -4,7 +4,7 @@
     [Parameter] public OrderInfo OrderInfo { get; set; }
 }
 
-<div>
+<div class="list-item-div form-div">
     <label>Order Number:</label>
     <InputText @bind-Value="OrderInfo.Number" class="form-control" />
     <label>Date:</label>
