--- a/Invoicify.Client/BlazorComponents/PartyInfoComponent.razor
+++ b/Invoicify.Client/BlazorComponents/PartyInfoComponent.razor
@@ -5,13 +5,13 @@
     [Parameter] public PartyInfo PartyInfo { get; set; }
 }
 
-<div>
+<div class="component-div form-div">
     <h4>@Title</h4>
     <label>First Name:</label>
     <InputText @bind-Value="PartyInfo.FirstName" class="form-control" />
-    
     <label>Last Name:</label>
     <InputText @bind-Value="PartyInfo.LastName" class="form-control" />
+    
     <label>VAT ID:</label>
     <InputText @bind-Value="PartyInfo.VatId" class="form-control" />
 </div>
