--- a/Invoicify.Client/Invoices/InvoiceComponents/BankInfoComponent.razor
+++ b/Invoicify.Client/Invoices/InvoiceComponents/BankInfoComponent.razor
@@ -17,8 +17,7 @@
 <div class="bank-info">
     <h4>@Info.Name</h4>
     <p class="labeled"><span class="label">Číslo účtu:</span><span class="value">@Info.Account/@Info.BankNumber</span></p>
-    @if(QrPayment is not null)
-    {
+    @if(QrPayment is not null) {
         <img class="qr-code" src="@QrPayment.GetQrCode()" alt="QR Code"/>
     }
 </div>
