Added auto-filling of variable symbol based on Invoice Number

--- a/Invoicify.Client/BlazorComponents/InvoiceComponent.razor
+++ b/Invoicify.Client/BlazorComponents/InvoiceComponent.razor
@@ -16,6 +16,11 @@
         
         return base.OnInitializedAsync();
     }
+
+    private void Number2VS(ChangeEventArgs e) {
+        var val = e.Value?.ToString();
+        Invoice.VariableSymbol = val?.Length <= 10 ? val : val?[..10];
+    }
 }
 
 <div class="component-div form-div">
