--- a/Invoicify.Client/Pages/Invoice/InvoiceCreator.razor
+++ b/Invoicify.Client/Pages/Invoice/InvoiceCreator.razor
@@ -46,8 +46,7 @@
         _invoice.OrdersInfo.Add(new OrderInfo {  });
     }
     
-    private void AddItem()
-    {
+    private void AddItem() {
         _invoice.Items.Add(new InvoiceItem {  });
     }
     
