Added email and phone to PartyInfoComponent.razor

--- a/Invoicify.Client/BlazorComponents/PartyInfoComponent.razor
+++ b/Invoicify.Client/BlazorComponents/PartyInfoComponent.razor
@@ -12,6 +12,11 @@
     <label>Last Name:</label>
     <InputText @bind-Value="PartyInfo.LastName" class="form-control" />
     
+    <label>Email:</label>
+    <InputText @bind-Value="PartyInfo.Email" class="form-control" />
+    <label>Phone:</label>
+    <InputText @bind-Value="PartyInfo.Phone" class="form-control" />
+    
     <label>VAT ID:</label>
     <InputText @bind-Value="PartyInfo.VatId" class="form-control" />
     
