--- a/Invoicify.Client/Invoices/InvoiceComponents/BankInfoComponent.razor
+++ b/Invoicify.Client/Invoices/InvoiceComponents/BankInfoComponent.razor
@@ -16,7 +16,14 @@
 
 <div class="bank-info">
     <h4>@Info.Name</h4>
-    <p class="labeled"><span class="label">Číslo účtu:</span><span class="value">@Info.Account/@Info.BankNumber</span></p>
+    <p class="labeled">
+        @if (!string.IsNullOrEmpty(Info.Account)) { 
+            <span class="label">Číslo účtu:</span><span class="value">@Info.Account/@Info.BankNumber</span>
+        } else {
+            <span class="label">IBAN:</span>
+            <span class="value">@Info.Iban+@Info.Bic</span>
+        }
+    </p>
     @if(QrPayment is not null) {
         <img class="qr-code" src="@QrPayment.GetQrCode()" alt="QR Code"/>
     }
