--- a/Invoicify.Client/Invoices/InvoiceComponents/InvoiceTotalComponent.razor
+++ b/Invoicify.Client/Invoices/InvoiceComponents/InvoiceTotalComponent.razor
@@ -1,3 +1,4 @@
+@using System.Globalization
 
 @code {
 
@@ -6,15 +7,18 @@
 
     [Parameter]
     public decimal Subtotal { get; set; }
+    
+    [Parameter]
+    public NumberFormatInfo CurrencyFormat { get; set; }
 
 }
 
 <div class="totals">
     <div class="subtotal">
-        <p>Mezisoučet: @Subtotal.ToString("C")</p>
+        <p>Mezisoučet: @Subtotal.ToString("C", CurrencyFormat)</p>
     </div>
     <div class="total">
-        <h3>Součet: @Total.ToString("C")</h3>
+        <h3>Součet: @Total.ToString("C", CurrencyFormat)</h3>
     </div>
 </div>
 
