--- a/Invoicify.Server/Views/InvoiceView.razor
+++ b/Invoicify.Server/Views/InvoiceView.razor
@@ -1,5 +1,6 @@
 @page "/invoice-view"
-@using Invoicify.Client.Invoices.InvoiceComponents
+@using Data.DbModel
+@using Invoicify.Server.Views.InvoiceComponents
 @using static Data.CurrencyTransformer
 
 
